fixed spacing issue

--- a/app/styles/app.notepad.scss
+++ b/app/styles/app.notepad.scss
@@ -77,10 +77,11 @@
 					height: 36px;
 					display: inline-block;
 					float:left;
-					width: 15%;
 					text-align: center;
 					color: #0078e7;
 					padding-top:7px;
+					padding-left: 23px;
+					margin-right: 16px;
 				}
 
 				.video-time{
